--- a/loans/Dockerfile
+++ b/loans/Dockerfile
@@ -4,7 +4,7 @@ FROM openjdk:17-jdk-slim
 #MAINTAINER x.com
 
 # Add the application jar to the image
-COPY target/accounts-0.0.1-SNAPSHOT.jar accounts-0.0.1-SNAPSHOT.jar
+COPY /target/loans-0.0.1-SNAPSHOT.jar loans-0.0.1-SNAPSHOT.jar
 
 # Execute the application
-ENTRYPOINT ["java", "-jar", "accounts-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-jar", "loans-0.0.1-SNAPSHOT.jar"]
