--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 8080
 spring:
+  application:
+    name: "accounts"
+  profiles:
+    active: "prod"
   datasource:
     username: sa
     password: ''
@@ -15,22 +19,4 @@ spring:
       ddl-auto: update
     show-sql: true
   config:
-    import:
-      - "application_qa.yml"
-      - "application_prod.yml"
-  profiles:
-    active:
-      - "prod"
-
-
-build:
-  version: "3.0"
-
-accounts:
-#  message:"Welcome to EazyBank accounts related local APIs"
-  contactDetails:
-    name: "John Doe - Developer"
-    email: "John@eazybank.com"
-  onCallSupport:
-    - (555) 555-1234
-    - (555) 523-1342
+    import: "optional:configserver:http://localhost:8071/"
