--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -9,5 +9,20 @@ spring:
         native:
           search-locations: "classpath:/config"
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+#  health:
+#    readinessstate:
+#      enabled: true
+#    livenessstate:
+#      enabled: true
+#  endpoint:
+#    health:
+#      probes:
+#        enabled: true
+
 server:
   port: 8071
