--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -6,19 +6,16 @@ spring:
   profiles:
     active: "prod"
   datasource:
-    username: sa
-    password: ''
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:testdb
-  h2:
-    console:
-      enabled: true
+    url: jdbc:mysql://localhost:3306/accountsdb
+    username: root
+    password: root
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: update
     show-sql: true
-
+  sql:
+    init:
+      mode: always
+  config:
+    import: "optional:configserver:http://localhost:8071/"
 
 management:
   endpoints:
