--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -6,19 +6,15 @@ spring:
   profiles:
     active: "prod"
   datasource:
-    url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
-  h2:
-    console:
-      enabled: true
+    url: jdbc:mysql://localhost:3306/cardsdb
+    username: root
+    password: root
+    driver-class-name: com.mysql.jdbc.Driver
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: update
     show-sql: true
-
+  sql:
+    init:
+      mode: always
 
 management:
   endpoints:
